# cg_from_scratch

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
